Fixed layout issue on update-profile page.

--- a/styles/update-profile.css
+++ b/styles/update-profile.css
@@ -99,7 +99,6 @@ body {
         grid-column: 2 / span 1;
         margin: 0em 2em 0 2em;
         background-color: white;
-        z-index: 1;
     }
 
     .pic-holder {
@@ -371,7 +370,7 @@ body {
         top: 0;
         -o-object-fit: contain;
         object-fit: contain;
-        z-index: 2;
+        z-index: 1;
     }
 }
 
@@ -637,6 +636,6 @@ body {
 
     #easterEgg {
         display: none;
-      }
-      
+    }
+
 }
